...
    private var inButtonPressHandler = false

    weak var viewController: MovieQuizPresenterDelegate?
    private var questionFactory: QuestionFactoryProtocol?
    private var currentQuestion: QuizQuestion?
    private let gameStatistic: StatisticServiceProtocol?
    private var alertPresenter: AlertPresenterProtocol?

    init (viewController: MovieQuizPresenterDelegate? = nil) {
        self.viewController = viewController
        alertPresenter = AlertPresenter(view: viewController as? UIViewController)
        gameStatistic = StatisticServiceImplementation()
        questionFactory = QuestionFactory(moviesLoader: MoviesLoader(), delegate: self)
...
                        Ваш результат: \(correctAnswers.intToString)/\(questionsAmount.intToString)
                        Количество сыгранных квизов: \(gameStatistic.gamesCount.intToString)
                        Рекорд: \(gameStatistic.bestGame.correct.intToString)/\(gameStatistic.bestGame.total.intToString) (\(gameStatistic.bestGame.date.dateTimeString))
                        Средняя точность: \(gameStatistic.totalAccuracy.percentToString(fractionalLength: 2))
                        """
                alertPresenter?.showAlert(alert: AlertModel(
                    title: "Этот раунд окончен!",
                    message: text,
                    buttonText: "Сыграть ещё раз!",
                    completion: 
                        {[weak self] _ in
                            self?.restartQuiz()
                        }
...
